// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`javascript TypeScript should apply migration TypeScript 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
            "options": Object {
              "inline": false,
              "name": "[name].[hash].js",
              "publicPath": "/",
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\ts-loader\\\\index.js",
            "options": Object {
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\migration.tsconfig.json",
            },
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\ts-loader\\\\index.js",
            "options": Object {
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\migration.tsconfig.json",
            },
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`javascript TypeScript should apply strict TypeScript 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
            "options": Object {
              "inline": false,
              "name": "[name].[hash].js",
              "publicPath": "/",
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\ts-loader\\\\index.js",
            "options": Object {
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\strict.tsconfig.json",
            },
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\ts-loader\\\\index.js",
            "options": Object {
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\strict.tsconfig.json",
            },
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`javascript TypeScript should correctly merge options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
            "options": Object {
              "inline": false,
              "name": "[name].[hash].js",
              "publicPath": "/",
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\ts-loader\\\\index.js",
            "options": Object {
              "compilerOptions": Object {
                "allowJs": true,
              },
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\migration.tsconfig.json",
            },
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.tsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\ts-loader\\\\index.js",
            "options": Object {
              "compilerOptions": Object {
                "allowJs": true,
              },
              "configFile": "C:\\\\projects\\\\dev\\\\webpack-features\\\\migration.tsconfig.json",
            },
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for current node in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "node": "current",
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for legacy browsers in development mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": true,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "> 1%",
                        "last 2 versions",
                        "Firefox ESR",
                      ],
                    },
                    "useBuiltIns": "entry",
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for legacy browsers in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        "> 1%",
                        "last 2 versions",
                        "Firefox ESR",
                      ],
                    },
                    "useBuiltIns": "entry",
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for modern browsers in development mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": true,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`javascript should return a valid rule with default paremeters for modern browsers in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.worker\\\\\\.jsx\\?\\$/i,
        "use": Object {
          "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\worker-loader\\\\dist\\\\cjs.js",
          "options": Object {
            "inline": false,
            "name": "[name].[hash].js",
            "publicPath": "/",
          },
        },
      },
      Object {
        "exclude": /node_modules/,
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.worker\\)\\.\\)\\*\\\\\\.jsx\\?\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\babel-loader\\\\lib\\\\index.js",
            "options": Object {
              "babelrc": false,
              "plugins": Array [
                "@babel/plugin-proposal-object-rest-spread",
                "@babel/plugin-proposal-decorators",
                Array [
                  "@babel/plugin-proposal-class-properties",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-syntax-dynamic-import",
              ],
              "presets": Array [
                Array [
                  "@babel/preset-env",
                  Object {
                    "debug": false,
                    "modules": false,
                    "targets": Object {
                      "browsers": Array [
                        ">0.25%",
                        "not ie 11",
                        "not op_mini all",
                      ],
                    },
                    "useBuiltIns": false,
                  },
                ],
              ],
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\eslint-loader\\\\index.js",
            "options": Object {},
          },
        ],
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;
